Remove STR feature